fix overflow issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 input,
@@ -162,32 +163,6 @@ h6 {
 /* Typography */
 
 /* @font-face {
-  font-family: 'Atkinson Hyperlegible Next';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src:
-    url(/fonts/atkinson-hyperlegible-next-latin-400-normal.woff2) format('woff2'),
-    url(/fonts/atkinson-hyperlegible-next-latin-400-normal.woff) format('woff');
-  unicode-range:
-    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC,
-    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Atkinson Hyperlegible Next';
-  font-style: italic;
-  font-display: swap;
-  font-weight: 400;
-  src:
-    url(/fonts/atkinson-hyperlegible-next-latin-400-italic.woff2) format('woff2'),
-    url(/fonts/atkinson-hyperlegible-next-latin-400-italic.woff) format('woff');
-  unicode-range:
-    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC,
-    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-} */
-
-@font-face {
   font-family: 'Atkinson Hyperlegible Mono';
   font-style: normal;
   font-display: swap;
@@ -208,6 +183,32 @@ h6 {
   src:
     url(/fonts/atkinson-hyperlegible-mono-latin-400-italic.woff2) format('woff2'),
     url(/fonts/atkinson-hyperlegible-mono-latin-400-italic.woff) format('woff');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC,
+    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+} */
+
+@font-face {
+  font-family: 'Atkinson Hyperlegible Next';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src:
+    url(/fonts/atkinson-hyperlegible-next-latin-400-normal.woff2) format('woff2'),
+    url(/fonts/atkinson-hyperlegible-next-latin-400-normal.woff) format('woff');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC,
+    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Atkinson Hyperlegible Next';
+  font-style: italic;
+  font-display: swap;
+  font-weight: 400;
+  src:
+    url(/fonts/atkinson-hyperlegible-next-latin-400-italic.woff2) format('woff2'),
+    url(/fonts/atkinson-hyperlegible-next-latin-400-italic.woff) format('woff');
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC,
     U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
@@ -279,8 +280,6 @@ sub {
 sup {
   top: -0.5em;
 }
-
-/* Styles */
 
 :root {
   scroll-padding-top: calc(var(--navbar-height) + 0.5rem);
@@ -375,18 +374,8 @@ progress::-moz-progress-bar {
   font-weight: bold;
 }
 
-/* any checkboxes with a tag label */
 [type='checkbox']:has(+ label.tag) {
   display: none;
-}
-
-body > header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  max-width: 100%;
-  background-color: var(--color-crust);
-  z-index: 90;
 }
 
 body > main {
@@ -397,7 +386,7 @@ body > header {
   position: fixed;
   top: 0;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   background-color: var(--color-crust);
   z-index: 90;
 }
@@ -513,10 +502,6 @@ hr {
   border-top: 1px solid var(--color-selection);
   color: inherit;
   height: 0;
-}
-
-.prose img {
-  max-width: clamp(0, var(--readable-width), 100vw - 2rem);
 }
 
 code,
@@ -762,12 +747,12 @@ form {
 [data-tooltip]::before {
   content: '';
   position: absolute;
-  top: 0.25rem;
-  left: calc(100% + 0.15rem);
-  transform: translateX(-50%);
+  top: 100%;
+  left: 50%;
+  transform: translateY(-50%);
   border-width: 0.35rem;
   border-style: solid;
-  border-color: transparent var(--color-surface0) transparent transparent;
+  border-color: transparent transparent var(--color-surface0) transparent;
   opacity: 0;
   visibility: hidden;
   transition:
@@ -780,8 +765,8 @@ form {
   content: attr(data-tooltip);
   z-index: 100;
   position: absolute;
-  left: calc(100% + 0.5rem);
-  top: -0.325rem;
+  left: 0;
+  top: calc(100% + 0.25rem);
   color: var(--color-text);
   background-color: var(--color-surface0);
   padding: 0.25rem 0.5rem;
@@ -792,6 +777,8 @@ form {
   transition:
     opacity 0.15s,
     visibility 0.15s;
+  overflow: scroll;
+  max-width: calc(var(--main-width) - 4rem);
 }
 
 [data-tooltip]:hover::after,
